# px4_indoor_navigation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pre_launch.bash  px4_indoor_navigation.creator.user.b7efffb  px4_indoor_navigation.files  px4_indoor_navigation.includes
Firmware/Tools/sitl_gazebo/: CMakeLists.txt
Firmware/launch/GAAS/: path_planning.launch
Firmware/launch/etc/: mavros_posix_sitl_lidar.launch
Firmware/launch/indoor_automatic/: complex_home_2_gps.launch  complex_home_3.launch  complex_home_3_gps.launch  complex_home_4_gps.launch  complex_home_5_gps.launch  complex_home_6.launch  complex_home_6_obstacles.launch  simple_environment.launch  simple_environment_gps.launch  willow_garage_gps.launch
Firmware/launch/indoor_cartographer/: mavros_posix_sitl_rplidar.launch  mavros_posix_sitl_rplidar_no_gps.launch
Firmware/launch/indoor_hybrid/: mavros_posix_sitl_rplidar.launch  mavros_posix_sitl_rplidar_no_gps.launch  simple_env_3dmapping.launch  simple_env_3dmapping_no_gps.launch
Firmware/launch/real_quad/: cartographer_only.launch  laser_vision_hybrid.launch  laser_vision_tests.launch  vio_only.launch  vio_w_laser_mapping.launch
Firmware/launch/simple_tests/: mavros_posix_sitl_rplidar.launch  mavros_posix_sitl_rplidar_no_gps.launch
etc/firmwares/: px4_fmu-v3_default_192.px4
etc/params/: h450_192_indoor_garage.params
etc/stereo_calib/: intrinsics.yml  main.cpp  stereo_cut.m
etc/stereo_calib/param_20200606/: extrinsics.yml  real_stereo_calib.yml  stereo_param_20200606.mat  stereo_real.yaml
etc/stereo_calib/param_20200613/: extrinsics.yml  intrinsics.yml
src/debug/: trajectory_recorder_main.cpp
src/driver/: CMakeLists.txt  camera_driver_main.cpp
src/key_rc/: key_main.cpp
src/navigator/: DiscreteGridUtils.py  Navigator.py  commander.py  pose_visualize.py  px4_mavros_run.py  px4_navigator.sublime-workspace
src/navigator/astar/: astar.py  astar_config.py
src/navigator2/: DiscreteGridUtils.py  Pos2PosController.py  README.MD  SimController.py  navigator2.py  navigator2_config.py  occupancy_grid_helper.py  px4_mavros_run.py
src/navigator2/astar/: astar.py  astar_2d.py  astar_config.py
src/navigator2/path_optimization/: path_pruning.py
src/topic_relay/: topic_relay_main.cpp  topic_relay_real_quad_main.cpp
src/visual_obstacle_map/: CMakeLists (copy).txt  CMakeLists.txt  config.yaml
src/visual_obstacle_map/cfg/: CamToRobotCalibParams.cfgc
src/visual_obstacle_map/include/: quat_2_dcm.hpp
src/visual_obstacle_map/src/: dense_reconstruction.cpp  match_pointcloud_and_slam_pose.cpp  match_pointcloud_and_slam_pose2.cpp
src/ygz_slam_ros/: CMakeLists.txt  generate.sh
src/ygz_slam_ros/examples/: CMakeLists.txt  EurocStereo.cpp  EurocStereoVIO.cpp  EurocStereoVIO_ros.cpp  Kitti.cpp  (+4 more)
(+61 files in other folders)
